--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a48474">  <td>19/09/19 12:08:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LocationAdd_Datadriven.addMultipleLocations(java.lang.String, java.lang.String)[pri:0, instance:com.ivy.testcases.TC_LocationAdd_Datadriven@8f4ea7c]">addMultipleLocations</td> 
-  <td>main@807657332</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/09/19 12:08:17</td>   <td>4360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LocationAdd_Datadriven.addMultipleLocations(java.lang.String, java.lang.String)[pri:0, instance:com.ivy.testcases.TC_LocationAdd_Datadriven@8f4ea7c]">addMultipleLocations</td> 
-  <td>main@807657332</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/09/19 12:08:17</td>   <td>4374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LocationAdd_Datadriven.addMultipleLocations(java.lang.String, java.lang.String)[pri:0, instance:com.ivy.testcases.TC_LocationAdd_Datadriven@8f4ea7c]">addMultipleLocations</td> 
-  <td>main@807657332</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/09/19 12:08:13</td>   <td>317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_LocationAdd_Datadriven.disconnect()[pri:0, instance:com.ivy.testcases.TC_LocationAdd_Datadriven@8f4ea7c]">&lt;&lt;disconnect</td> 
-<td>&nbsp;</td>  <td>main@807657332</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/09/19 12:07:44</td>   <td>-28680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_LocationAdd_Datadriven.loginsetup()[pri:0, instance:com.ivy.testcases.TC_LocationAdd_Datadriven@8f4ea7c]">&gt;&gt;loginsetup</td> 
-<td>&nbsp;</td>  <td>main@807657332</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/09/19 12:08:17</td>   <td>4347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_LocationAdd_Datadriven.loginsetup()[pri:0, instance:com.ivy.testcases.TC_LocationAdd_Datadriven@8f4ea7c]">&gt;&gt;loginsetup</td> 
-<td>&nbsp;</td>  <td>main@807657332</td>   <td></td> </tr>
-<tr bgcolor="756ead">  <td>19/09/19 12:07:37</td>   <td>-35485</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setup()[pri:0, instance:com.ivy.testcases.TC_LocationAdd_Datadriven@8f4ea7c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@807657332</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>19/09/25 16:48:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_UserAddingUserManagement.loginsetup()[pri:0, instance:com.ivy.testcases.TC_UserAddingUserManagement@1d2adfbe]">&gt;&gt;loginsetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2040467681</td>   <td></td> </tr>
+<tr bgcolor="756ead">  <td>19/09/25 16:47:48</td>   <td>-12088</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setup()[pri:0, instance:com.ivy.testcases.TC_UserAddingUserManagement@1d2adfbe]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2040467681</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>19/09/25 16:48:14</td>   <td>13686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_UserAddingUserManagement.userMappingCase()[pri:0, instance:com.ivy.testcases.TC_UserAddingUserManagement@1d2adfbe]">userMappingCase</td> 
+  <td>main@2040467681</td>   <td></td> </tr>
 </table>
