--- a/IvyProjects-master/IvyProjects-master/test-output/old/Default suite/methods.html
+++ b/IvyProjects-master/IvyProjects-master/test-output/old/Default suite/methods.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6dfcb">  <td>19/10/08 13:06:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SQL.sql()[pri:0, instance:com.ivy.testcases.SQL@cb5822]">sql</td> 
-  <td>main@1597249648</td>   <td></td> </tr>
+<tr bgcolor="ceabc1">  <td>19/11/14 16:30:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setup()[pri:0, instance:com.ivy.testcases.TC_Productdistribution_2@9597028]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1497845528</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/11/14 16:30:50</td>   <td>4280</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Productdistribution_2.loginforLinks()[pri:0, instance:com.ivy.testcases.TC_Productdistribution_2@9597028]">&gt;&gt;loginforLinks</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1497845528</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/11/14 16:31:21</td>   <td>36017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Productdistribution_2.ClickProductDistributionLink()[pri:1, instance:com.ivy.testcases.TC_Productdistribution_2@9597028]">ClickProductDistributionLink</td> 
+  <td>main@1497845528</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/11/14 16:31:23</td>   <td>37658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Productdistribution_2.mapProductstoDistributor()[pri:2, instance:com.ivy.testcases.TC_Productdistribution_2@9597028]">mapProductstoDistributor</td> 
+  <td>main@1497845528</td>   <td></td> </tr>
 </table>
