--- a/IvyProjects-master/IvyProjects-master/test-output/old/Suite/classes.html
+++ b/IvyProjects-master/IvyProjects-master/test-output/old/Suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.ivy.testcases.TC_loginpage_001</td>
+<td>com.ivy.testcases.TC_Productdistribution_2</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginpagetest</td>
+<td>ClickProductDistributionLink</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>mapProductstoDistributor</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -21,19 +25,45 @@
 <td>setup</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>loginforLinks</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>com.ivy.testcases.TC_LocationAdd_001</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyLocationAdd</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>loginsetup</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td align='center' colspan='3'>@AfterMethod</td>
+<td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>end</td>
-<td>&nbsp;</td></tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
