--- a/IvyProjects-master/IvyProjects-master/test-output/old/Suite/methods.html
+++ b/IvyProjects-master/IvyProjects-master/test-output/old/Suite/methods.html
@@ -1,12 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97b678">  <td>19/10/03 14:29:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setup()[pri:0, instance:com.ivy.testcases.TC_loginpage_001@4550bb58]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1984975621</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/10/03 14:29:41</td>   <td>5525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_loginpage_001.loginsetup()[pri:0, instance:com.ivy.testcases.TC_loginpage_001@4550bb58]">&gt;&gt;loginsetup</td> 
-<td>&nbsp;</td>  <td>main@1984975621</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/10/03 14:29:44</td>   <td>8298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_loginpage_001.loginpagetest()[pri:1, instance:com.ivy.testcases.TC_loginpage_001@4550bb58]">loginpagetest</td> 
-  <td>main@1984975621</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/10/03 14:29:47</td>   <td>11450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_loginpage_001.end()[pri:0, instance:com.ivy.testcases.TC_loginpage_001@4550bb58]">&lt;&lt;end</td> 
-<td>&nbsp;</td>  <td>main@1984975621</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/11/15 13:17:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setup()[pri:0, instance:com.ivy.testcases.TC_LocationAdd_001@2a3b5b47]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@801559599</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/11/15 13:17:09</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setup()[pri:0, instance:com.ivy.testcases.TC_Productdistribution_2@6069db50]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@354685760</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>19/11/15 13:17:14</td>   <td>5065</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Productdistribution_2.loginforLinks()[pri:0, instance:com.ivy.testcases.TC_Productdistribution_2@6069db50]">&gt;&gt;loginforLinks</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@354685760</td>   <td></td> </tr>
+<tr bgcolor="7d60c0">  <td>19/11/15 13:17:14</td>   <td>5065</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_LocationAdd_001.loginsetup()[pri:0, instance:com.ivy.testcases.TC_LocationAdd_001@2a3b5b47]">&gt;&gt;loginsetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@801559599</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>19/11/15 13:17:42</td>   <td>32707</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Productdistribution_2.ClickProductDistributionLink()[pri:1, instance:com.ivy.testcases.TC_Productdistribution_2@6069db50]">ClickProductDistributionLink</td> 
+  <td>TestNG@354685760</td>   <td></td> </tr>
+<tr bgcolor="7d60c0">  <td>19/11/15 13:17:42</td>   <td>33161</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LocationAdd_001.verifyLocationAdd()[pri:0, instance:com.ivy.testcases.TC_LocationAdd_001@2a3b5b47]">verifyLocationAdd</td> 
+  <td>TestNG@801559599</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>19/11/15 13:17:43</td>   <td>34427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Productdistribution_2.mapProductstoDistributor()[pri:2, instance:com.ivy.testcases.TC_Productdistribution_2@6069db50]">mapProductstoDistributor</td> 
+  <td>TestNG@354685760</td>   <td></td> </tr>
 </table>
